--- a/index.html
+++ b/index.html
@@ -293,11 +293,6 @@
                     <img src="assets/img/team/Chandrasekaran.jpg" alt="member img">
                     <div class="member__hover">
                       <div class="member__content-inner">
-                        <div class="social__icons justify-content-center">
-                          <a href="#"><i class="fa fa-facebook"></i></a>
-                          <a href="#"><i class="fa fa-twitter"></i></a>
-                          <a href="#"><i class="fa fa-instagram"></i></a>
-                        </div><!-- /.social-icons -->
                       </div><!-- /.member-content-inner -->
                     </div><!-- /.member-hover -->
                   </div><!-- /.member-img -->
@@ -606,7 +601,7 @@
           <div class="col-sm-12 col-md-6 col-lg-6">
             <div class="bg-overlay">
               <div class="bg-img"><img src="assets/img/sections/manucaturing.jpg" alt="background"></div>
-              <div class="video__btn video__btn-white align-v-h equal-height">
+              <div class="video__btn video__btn-white align-v-h ">
                 <a class="popup-video" href="https://www.youtube.com/watch?4=&v=TKnufs85hXk">
                   <span class="video__player-animation"></span>
                   <div class="video__player">
@@ -820,6 +815,15 @@
                     <li><a href="http://mail.shreya.co.in/sogo/">Shreya Mail Sogo</a></li>
                     <li><a href="http://121.241.241.245/dixit/">Samir</a></li>
                     <li><a href="http://appsserver.shreya.co.in/scheme/">Schemes Bonus</a></li>
+                  </ul>
+                </nav>
+              </div><!-- /.footer-widget-content -->
+            </div><!-- /.col-lg-2 -->
+            <div class="col-6 col-sm-6 col-md-3 col-lg-2 footer__widget footer__widget-nav">
+              <h6 class="footer__widget-title"></h6>
+              <div class="footer__widget-content">
+                <nav>
+                  <ul class="list-unstyled">
                     <li><a href="http://fileshare.shreya.co.in/">FileShare Tool</a></li>
                     <li><a href="http://samir.shreya.co.in/chic_classic/">IT Declaration</a></li>
                     <li><a href="http://samir.shreya.co.in/downloads/">Software Downloads</a></li>
@@ -829,45 +833,28 @@
               </div><!-- /.footer-widget-content -->
             </div><!-- /.col-lg-2 -->
             <div class="col-6 col-sm-6 col-md-3 col-lg-2 footer__widget footer__widget-nav">
-              <h6 class="footer__widget-title">What We Do</h6>
-              <div class="footer__widget-content">
-                <nav>
-                  <ul class="list-unstyled">
-                    <li><a href="#">Warehousing</a></li>
-                    <li><a href="#">Air Freight</a></li>
-                    <li><a href="#">Ocean Freight</a></li>
-                    <li><a href="#">Road Freight</a></li>
-                    <li><a href="#">Supply Chain</a></li>
-                    <li><a href="#">Packaging</a></li>
-                  </ul>
-                </nav>
-              </div><!-- /.footer-widget-content -->
-            </div><!-- /.col-lg-2 -->
-            <div class="col-6 col-sm-6 col-md-3 col-lg-2 footer__widget footer__widget-nav">
-              <h6 class="footer__widget-title">Who We Serve</h6>
-              <div class="footer__widget-content">
-                <nav>
-                  <ul class="list-unstyled">
-                    <li><a href="#">Retail & Consumer</a></li>
-                    <li><a href="#">Sciences & Healthcare</a></li>
-                    <li><a href="#">Industrial & Chemical</a></li>
-                    <li><a href="#">Power Generation</a></li>
-                    <li><a href="#">Food & Beverage</a></li>
-                    <li><a href="#">Oil & Gas</a></li>
-                  </ul>
-                </nav>
-              </div><!-- /.footer-widget-content -->
-            </div><!-- /.col-lg-2 -->
-            <div class="col-6 col-sm-6 col-md-3 col-lg-2 footer__widget footer__widget-nav">
               <h6 class="footer__widget-title">Quick Links</h6>
               <div class="footer__widget-content">
                 <nav>
                   <ul class="list-unstyled">
-                    <li><a href="#">Request A Quote</a></li>
-                    <li><a href="#">Track & Trace</a></li>
-                    <li><a href="#">Find A Location</a></li>
-                    <li><a href="#">Global Agents</a></li>
-                    <li><a href="#">Help & FAQ</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">How we work</a></li>
+                    <li><a href="#">Manufacturing</a></li>
+                  </ul>
+                </nav>
+              </div><!-- /.footer-widget-content -->
+            </div><!-- /.col-lg-2 -->
+            <div class="col-6 col-sm-6 col-md-3 col-lg-2 footer__widget footer__widget-nav">
+              <h6 class="footer__widget-title"></h6>
+              <div class="footer__widget-content">
+                <nav>
+                  <ul class="list-unstyled">
+                    <li><a href="http://fileshare.shreya.co.in/">Product</a></li>
+                    <li><a href="http://samir.shreya.co.in/chic_classic/">R & D</a></li>
+                    <li><a href="http://samir.shreya.co.in/downloads/">Career</a></li>
+                    <li><a href="http://samir.shreya.co.in/ithelpdesk/">Contact</a></li>
                   </ul>
                 </nav>
               </div><!-- /.footer-widget-content -->
