--- a/leadership-team.html
+++ b/leadership-team.html
@@ -180,9 +180,19 @@
                 <img src="assets/img/team/hemanshu.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>Behind every great success, there are inspirational
+                      contributions made by several people. The success
+                      story of SHREYA will also be incomplete without
+                      the support of the Core Team of Management <br>
+                      • Young Dynamic Mechanical Engineer, with
+                      Master’s degree. <br>
+                      • Has a strong inclination towards Production &
+                      Manufacture. A Natural Team Leader with keen
+                      interest in Plant Operation and Administration</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
+
               <div class="member__info">
                 <h5 class="member__name">Himanshu Baldev Singh
                   </h5>
@@ -196,6 +206,14 @@
                 <img src="assets/img/team/saul.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• More than 40 years experience in
+                      Biopharmaceutical industry, beginning his career
+                      with Syntex Corporation (now Roche) <br>
+                      • Served 3M, at its clinical research group & also was
+                      Head of International Business Development for
+                      several Health and Sciences Sector subsidiary
+                      companies <br>
+                      • Managed 27 clinical trials in U.S. and Europe</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
@@ -212,6 +230,10 @@
                 <img src="assets/img/team/shekhar.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• An Engineer in M-Tech (MADI), with Aggressive Marketing
+                      & Gentle Personality, that makes him a natural team leader <br>
+                      • Has 30 years experience and is with Shreya, Moscow
+                      since inception</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
@@ -228,6 +250,15 @@
                 <img src="assets/img/team/Chandrasekaran.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• Ph.D in Pharmacology & Toxicology and has
+                      Entrepreneur Talent <br>
+                      • Over 28 years experience both in Clinical Studies
+                      & Business Development <br>
+                      • With Shreya since 2002 <br>
+                      • Was a Junior Research Fellow in a project funded
+                      by the scientific commission, appointed by Govt. of India
+                      to generate toxicological Data on MIC, soon after Bhopal
+                      Gas Leakage</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
@@ -244,6 +275,10 @@
                 <img src="assets/img/team/arun.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• A Chartered Accountant with 28 years of experience and
+                      has been with Shreya since inception <br>
+                      • Has thorough exposure to critical aspects of Finance,
+                      Taxation and Foreign Exchange related matters.</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
@@ -260,6 +295,8 @@
                 <img src="assets/img/team/dixit.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• An young, Dynamic and topper in CA program <br>
+                      • Has an eye for fine details in Finance and Accounts</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
@@ -275,6 +312,10 @@
                 <img src="assets/img/team/kishore.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• A Medical Graduate with over four decades of
+                      experience in Pharmaceutical Business <br>
+                      • His vast experience comes handy to company in
+                      strategic planning for new business expansion</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
@@ -291,6 +332,10 @@
                 <img src="assets/img/team/Avinash.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• Management Graduate with 21 years experience in
+                      various Industries including Pharma International trade <br>
+                      • Successfully setup marketing networks across India,
+                      UAE & other countries</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
@@ -306,6 +351,11 @@
                 <img src="assets/img/team/lakhinesh.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• Has over 30 years experience in Pharmaceutical Sales and
+                      Marketing <br>
+                      • Started his career at Field level and has grown up to top
+                      level with years of rich experience in his Sales Field
+                      Management</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
@@ -326,6 +376,8 @@
                 <img src="assets/img/team/akhilesh.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• Apart from Corporate Affairs activities also looks into
+                      Regulatory Compliance activities as well.</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
@@ -342,6 +394,11 @@
                 <img src="assets/img/team/ashok.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• Graduate in Science with additional Degrees in
+                      Management, Law & Materials Management. <br>
+                      • Has over 29 years experience, worked in various
+                      Indian and MNC companies. <br>
+                      • Associated with Shreya since 2004.</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
@@ -358,6 +415,9 @@
                 <img src="assets/img/team/dr.a.g.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• Ph.D in Pharmaceutical Sciences with 30 years experience <br>
+                      • Had worked for various Multi Nationals before associating
+                      with Shreya</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
@@ -373,6 +433,9 @@
                 <img src="assets/img/team/Neeraj.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• PG in Pharmaceutical Sciences and is a team builder <br>
+                      • Has grown in the organization from Shop floor to Head the
+                      Production in a short span</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
@@ -405,6 +468,8 @@
                 <img src="assets/img/team/anil.jpg" alt="member img">
                 <div class="member__hover">
                   <div class="member__content-inner">
+                    <p>• Has over three & half decades of experience
+                      in Pharmaceutical HR activities</p>
                   </div><!-- /.member-content-inner -->
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
