--- a/manufacture.html
+++ b/manufacture.html
@@ -121,10 +121,10 @@
         <div class="row">
           <div class="col-sm-12 col-md-6 col-lg-6 equal-height">
             <div class="inner-padding">
-              <div class="heading heading-2 mb-50">
+              <div class="heading heading-2 ">
                 <h2 class="heading__title color-white">Manufacturing Capabilities at Shreya Life Sciences</h2>
-                <p class="heading__desc color-white">Our golden rule: Ensur quality at every step.
-                   Shreya Life Sciences, believe in innovation and excellence. SHREYA takes pride in manufacturing a wide range of products with precision. The strong armoury of manufacturing capabilities include ing two state-of-the-art manufacturing units built as per the requirement of international regulatory bodies a strong research services and efficient manufacturing. Also has obtained PICS approval to one of its oral solid manufacturing unit, SHREYA is committed to providing products and services with one thing in common - Quality
+                <p class="heading__desc color-white">Our golden rule: Ensure quality at every step.
+                   Shreya Life Sciences, believe in innovation and excellence. SHREYA takes pride in manufacturing a wide range of products with precision. The strong armoury of manufacturing capabilities include two state-of-the-art manufacturing units built as per the requirement of international regulatory bodies, a strong research services and efficient manufacturing. Also has obtained PICS approval to one of its oral solid manufacturing unit, SHREYA is committed to providing products and services with one thing in common - Quality
                   </p>
               </div><!-- /.heading -->
             </div>
@@ -207,13 +207,13 @@
 
           <div class="col-style">
             <div class="widget__content">
-              <h5>Our facility is equipped to produce | Our Products (combining both)</h5>
+              <h5>Facility is equipped to produce</h5>
               <ul>
-                <li>Small volume Parenterals (both Vials & Ampoules) Iron Dextran, Vitamin B Complex, Gentamicin &
+                <li>Small volume Parenterals (both Vials & Ampoules) like Iron Dextran, Vitamin B Complex, Gentamicin &
                   Quinine etc.</li>
-                <li>rDNA Human Insulin Vials 100IU/ml & 40IU/ml 10 ml vials as Regular, Neutral (NPH) & Biphasic
-                  (Premix) – Recosulin</li>
-                <li>Oral solid formulations (Tablets & Capsules)</li>
+                <li>rDNA Human Insulin Vials like  Recosulin 100IU/ml & 40IU/ml 10 ml vials as Regular, Neutral (NPH) & Biphasic
+                  (Premix) variants – Recosulin</li>
+                <li>Oral solid formulations (Various Tablets & Capsules)</li>
               </ul>
             </div>
           </div>
@@ -279,11 +279,9 @@
                   an IIT) and home to the oldest army cantonment is the second centre for Shreya Life Sciences’
                   production unit. <br>
                   Established in 2008, this plant too is certified by WHO for Sterile dry powder cephalosporin
-                  injection, Oral Solid Products and lozenges . It is also certified by GMP.
-                  and built as per the guidelines international requirements.<br>
-                  The Roorkee production plant has a separate manufacturing block for each product category. Soon, this
-                  plant is also set to have a state-of-the-art Insulin formulation unit.
-                </p>
+                  injection, Oral Solid / Oral liquid Products and lozenges . It is also certified by GMP.
+                  and built as per the guidelines of international requirements.<br>
+                  The Roorkee production plant has a separate manufacturing block for each product category.</p>
               </div><!-- /.text-block -->
             </div><!-- /.case-single-item -->
           </div><!-- /.col-lg-6 -->
