--- a/nutritional.html
+++ b/nutritional.html
@@ -117,10 +117,10 @@
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="product.html">Products</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Antibiotics</li>
+                <li class="breadcrumb-item active" aria-current="page">Nutritional</li>
               </ol>
             </nav>
-            <h1 class="pagetitle__heading">Antibiotics</h1>
+            <h1 class="pagetitle__heading">Nutritional</h1>
           </div><!-- /.col-lg-12 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
@@ -313,7 +313,7 @@
             Benzyl Alcohol I.P. (as preservative)	1.5% v/v</td>
         <th class="mobile-header">Market rate</th><td>10ml</td>
       </tr>
-      <tr>
+      <tr style=" border-bottom: 0.5px solid #ddd;">
         <td>Whole Liver Extract inj </td>
         <th class="mobile-header">Number</th><td>Each ml contains  <br>
             Liver Fraction 1 derived from 8 g of fresh liver Containing: <br>
@@ -323,6 +323,7 @@
             Phenol I.P. (as preservative)		0.5 v/v</td>
         <th class="mobile-header">Market rate</th><td>10ml</td>
       </tr>
+
 
               </div><!-- /.social-icons -->
             </div><!-- /.col-lg-6 -->
