--- a/we-work.html
+++ b/we-work.html
@@ -208,7 +208,7 @@
               <!-- <span class="heading__subtitle">Services We Offer</span> -->
               <h2 class="heading__title mb-5">Exports</h2>
               <p class="heading__desc">At Shreya Life Sciences, the utmost priorities for exporting pharmaceutical products are driven by providing trusted, reliable, safe and high-quality products to improve the health and well-being of Patients. <br>
-               Currently, SHREYA export a wide range of formulations to various countries across five continents.
+               Currently, SHREYA exports a wide range of formulations to various countries across five continents.
                 <br><br><b>Key highlights of SHREYA’ International Exports include:</b> <br><br></p>
               <div class="list-style">
                   <ul>
@@ -368,7 +368,7 @@
               <div class="inner-padding">
                 <div class="heading  mb-50">
                   <h2 class="heading__title color-black">Contract Manufacturing:</h2>
-                  <p class="heading__desc color-black">Armed with more than 20+ years of industry expertise, Shreya Life Science collaborates with Pharmaceutical Marketing firms for on a contract manufacture basis to produce and supply Formulations. <br><br> State-of-the-art manufacturing facility for oral solids at Aurangabad has PICS approval <br><br> Currently, illustrious portfolio of clients who have recognised SHREYA include globally recognised firms like Lupin Limited, Sun Pharmaceutical Industries Ltd , Cadila Pharmceuticals Ltd , Piramal Pharma, Glenmark Pharmaceuticals & others. <br><br>Shreya welcomes contract manufacturing enquiries from both, domestic and international clients.<br><br>
+                  <p class="heading__desc color-black">Armed with more than 20+ years of industry expertise, Shreya Life Sciences, collaborates with Pharmaceutical Marketing firms for contract manufacture basis to produce and supply Formulations. <br><br> State-of-the-art manufacturing facility for oral solids at Aurangabad has PICS approval <br><br> Currently, illustrious portfolio of clients who have recognised SHREYA include globally recognised firms like Lupin Limited, Sun Pharmaceutical Industries Ltd , Cadila Pharmceuticals Ltd , Piramal Pharma, Glenmark Pharmaceuticals & others. <br><br>Shreya welcomes contract manufacturing enquiries from both, domestic and international clients.<br><br>
                       Kindly send your enquiries to: <a href="mailto:contractmanufacture@shreya.co.in">contractmanufacture@shreya.co.in</a>
                       </p>
                 </div><!-- /.heading -->
