--- a/product.html
+++ b/product.html
@@ -150,13 +150,13 @@
           <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="blog-item">
               <div class="blog__img">
-                <a href="#">
+                <a href="nutritional.html">
                   <img src="assets/img/sections/NUTRITIONAL.jpeg" alt="blog image">
                 </a>
               </div><!-- /.entry-img -->
               <div class="blog__content text-center">
                 <h4 class="blog__title mt-3 mb-0">NUTRITIONAL </h4>
-                <a href="antibiotics.html" class="btn btn__primary btn__hover3 btn__lg mt-20">Know more</a>
+                <a href="nutritional.html" class="btn btn__primary btn__hover3 btn__lg mt-20">Know more</a>
               </div><!-- /.entry-content -->
             </div><!-- /.blog-item -->
           </div><!-- /.col-lg-4 -->
@@ -164,26 +164,26 @@
           <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="blog-item">
               <div class="blog__img">
-                <a href="antibiotics.html">
+                <a href="antipyretics.html">
                   <img src="assets/img/sections/ANTIPYRETICS.jpg" alt="blog image">
                 </a>
               </div><!-- /.entry-img -->
               <div class="blog__content text-center">
                 <h4 class="blog__title mt-3 mb-0">ANTIPYRETICS</h4>
-                <a href="antibiotics.html" class="btn btn__primary btn__hover3 btn__lg mt-20">Know more</a>
+                <a href="antipyretics.html" class="btn btn__primary btn__hover3 btn__lg mt-20">Know more</a>
               </div><!-- /.entry-content -->
             </div><!-- /.blog-item -->
           </div><!-- /.col-lg-4 -->
           <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="blog-item">
               <div class="blog__img">
-                <a href="antibiotics.html">
+                <a href="antiemetics.html">
                   <img src="assets/img/sections/antiemetics.jpg" alt="blog image">
                 </a>
               </div><!-- /.entry-img -->
               <div class="blog__content text-center">
                 <h4 class="blog__title mt-3 mb-0">ANTIEMETICS</h4>
-                <a href="antibiotics.html" class="btn btn__primary btn__hover3 btn__lg mt-20">Know more</a>
+                <a href="antiemetics.html" class="btn btn__primary btn__hover3 btn__lg mt-20">Know more</a>
               </div><!-- /.entry-content -->
             </div><!-- /.blog-item -->
           </div><!-- /.col-lg-4 -->
