--- a/index.html
+++ b/index.html
@@ -598,10 +598,10 @@
               <a href="request-quote.html" class="btn  btn__white btn__hover2 btn__lg">Read More</a>
             </div>
           </div><!-- /.col-lg-6 -->
-          <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="col-sm-12 col-md-6 col-lg-6 ">
             <div class="bg-overlay">
               <div class="bg-img"><img src="assets/img/sections/manucaturing.jpg" alt="background"></div>
-              <div class="video__btn video__btn-white align-v-h ">
+              <div class="video__btn video__btn-white align-v-h equal-height">
                 <a class="popup-video" href="https://www.youtube.com/watch?4=&v=TKnufs85hXk">
                   <span class="video__player-animation"></span>
                   <div class="video__player">
